# ti_rm57lx_porting

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  misra.json  west.yml
boards/rm57lx_launchxl2/: board.cmake  rm57lx_launchxl2.dts
boards/rm57lx_launchxl2/support/: rm57lx.cfg
drivers/: CMakeLists.txt  Kconfig
drivers/clock_control/: CMakeLists.txt  clock_control_ti_hercules.c
drivers/gpio/: CMakeLists.txt  gpio_ti_hercules.c
drivers/hwinfo/: CMakeLists.txt  Kconfig.ti_hercules
drivers/interrupt_controller/: CMakeLists.txt  Kconfig.ti_hercules  intc_ti_hercules.c
drivers/timer/: CMakeLists.txt  Kconfig.ti_hercules  ti_hercules_rti_timer.c
dts/arm/ti/: rm57lx.dtsi
dts/bindings/clock/: ti,hercules-gcm.yaml  ti,hercules-lpo-clock.yaml  ti,hercules-pll-clock.yaml
dts/bindings/gpio/: ti,hercules-gio.yaml
dts/bindings/interrupt-controller/: ti,hercules-vim.yaml
dts/bindings/timer/: ti,hercules-rti-timer.yaml
include/zephyr/dt-bindings/clock/: ti-hercules-clock.h
include/zephyr/dt-bindings/interrupt-controller/: ti-hercules-vim.h
include/zephyr/dt-bindings/timer/: ti-hercules-rti-timer.h
soc/ti/hercules/: linker.ld  soc.yml
soc/ti/hercules/rm57lx/: Kconfig  soc.c  soc.h
zephyr/: module.yml
